--- a/crate5_CAEN_DT5720/Makefile
+++ b/crate5_CAEN_DT5720/Makefile
@@ -18,7 +18,7 @@ MODULES = crate.o rpc_master.o rpc_slave.o diag.o odb_wrapper.o
 MODULES += dt5720_module.o
 
 # CAEN
-CAEN_DIR = /home/daq/AlcapDAQ/CAEN
+CAEN_DIR = ../CAEN
 LDFLAGS += -L $(CAEN_DIR)/lib -lCAENDigitizer -lCAENComm -lCAENVME
 # CAEN_DIGITIZER library
 CXXFLAGS += -I $(CAEN_DIR)/CAENDigitizer/CAENDigitizer_2.3.2/include
