--- a/online-display/Makefile
+++ b/online-display/Makefile
@@ -1,4 +1,4 @@
-OBJS=getHist.o mainWindow.o Dictionary.o
+OBJS=getHist.o mainWindow.o Dictionary.o TOnlineFrame.o
 CXXFLAGS=`$(ROOTSYS)/bin/root-config --cflags`
 LIBS= `$(ROOTSYS)/bin/root-config --glibs` -lThread 
 
@@ -6,6 +6,9 @@ all: online-display
 
 Dictionary.cpp: 
 	rootcint -f $@ -c getHist.h LinkDef.h
+
+%.o: %.cpp
+	$(CXX) -c -Wall $(CXXFLAGS) $<
 
 online-display: $(OBJS)
 	$(CXX) -o $@ $(OBJS) $(LIBS)
