Making reference to ../work/$(USER) dependent on the current user

--- a/analyzer/rootana/Makefile
+++ b/analyzer/rootana/Makefile
@@ -51,7 +51,7 @@ OBJECTS := $(notdir $(patsubst %.cpp,%.o,$(OBJECTS)))
 	$(CXX) -MM $(CXXFLAGS) $< > $(notdir $(patsubst %.cpp,%.d,$<))
 
 rootana: $(OBJECTS)
-	$(CXX) $(ICCFLAGS) $(ROOT_LIBS) -o rootana $(OBJECTS) ../work/user/libDataClasses.so
+	$(CXX) $(ICCFLAGS) $(ROOT_LIBS) -o rootana $(OBJECTS) ../work/$(USER)/libDataClasses.so
 
 clean: 
 	rm -f *.d *.o *Dict.cpp *Dict.h blank rootana
