Get Linux architect by 'uname -m'; -p option gives processor type, not kernel type

--- a/crate3/Makefile
+++ b/crate3/Makefile
@@ -2,7 +2,7 @@
 OSTYPE = $(shell uname)
 ifeq ($(OSTYPE),Linux)
 OSTYPE = linux
-ifeq ($(shell uname -p),x86_64)
+ifeq ($(shell uname -m),x86_64)
   OSTYPE = linux64
 endif
 endif
