--- a/crate9/Makefile
+++ b/crate9/Makefile
@@ -2,7 +2,7 @@
 OSTYPE = $(shell uname)
 ifeq ($(OSTYPE),Linux)
 OSTYPE = linux
-ifeq ($(shell uname -p),x86_64)
+ifeq ($(shell uname -m),x86_64)
   OSTYPE = linux64
 endif
 endif
