CAENUpgrader added, Dawnsampling added to crate4, but CAEN firmware does not seem to support the downsampling feature

--- a/CAEN/CAENUpgrader-1.4.1/Makefile
+++ b/CAEN/CAENUpgrader-1.4.1/Makefile
@@ -148,9 +148,9 @@ INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
-LDFLAGS = 
+LDFLAGS = -L/home/daq/AlcapDAQ/CAEN/lib
 LIBOBJS = 
-LIBS = -lCAENVME 
+LIBS = -lCAENComm -lCAENVME 
 LTLIBOBJS = 
 MAKEINFO = ${SHELL} /home/daq/AlcapDAQ/CAEN/CAENUpgrader-1.4.1/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
