--- a/analyzer/.gitignore
+++ b/analyzer/.gitignore
@@ -1,6 +1,10 @@
 # MIDAS
 midas.log
-
+work/*/.*SHM
+work/*/*Dict*
+work/*/MODULES.h
+work/*/Makefile.MODULES
+src/muSC_muPC/MMuSCAnalysisMQL.cpp
 # OS Files
 *~
 *.swp
