Generate a shared lib for analysing of saved TAnalysedPulse

--- a/analyzer/rootana/Makefile
+++ b/analyzer/rootana/Makefile
@@ -1,4 +1,4 @@
-all: rootana
+all: rootana libAnalysis.so
 
 .PHONY: clean print all
 
@@ -46,13 +46,19 @@ include src/files.make
 OBJECTS := $(notdir $(patsubst %.C,%.o,$(SOURCES)))
 OBJECTS := $(notdir $(patsubst %.cpp,%.o,$(OBJECTS)))
 
+LIB_DATACLASS := $(DAQdir)/analyzer/work/$(USER)/libDataClasses.so
 %.o: %.cpp
 	$(CXX) -c -Wall $(CXXFLAGS) $<
 	$(CXX) -MM $(CXXFLAGS) $< > $(notdir $(patsubst %.cpp,%.d,$<))
 
 rootana: $(OBJECTS)
 #	$(CXX) $(ICCFLAGS) $(ROOT_LIBS) -o rootana $(OBJECTS) ../work/grange/libDataClasses.so
-	$(CXX) $(ICCFLAGS) -Wl,--no-as-needed -o rootana $(OBJECTS) $(ROOT_LIBS) ../work/$(USER)/libDataClasses.so
+	$(CXX) $(ICCFLAGS) -Wl,--no-as-needed -o rootana $(OBJECTS) $(ROOT_LIBS) $(LIB_DATACLASS)
+
+libAnalysis.so: $(OBJECTS)
+	$(CXX) $(ICCLIBS) $(ROOT_LIBS) -shared -o libAnalysis.so \
+		$(shell root-config --ldflags) -I$(ROOTSYS)/include $^ -lMinuit -lPhysics \
+		$(LIB_DATACLASS)
 
 clean: 
 	rm -f *.d *.o *Dict.cpp *Dict.h blank rootana
