A lot of refactoring and tidying up of code in main.cpp Most functionality that was sitting in the main function have been moved into functions below there.  Functions for handling the command line arguments have been moved into utils.h. Things compile ok, but I want to run over some data before I trust that this is really ok.
I have also added the compiler flag to ignore the 'deprecated conversion from string literal
to char*' warning that new versions of GCC will make. We make extensive
use of this in the code so this seemed easier to do.

--- a/analyzer/rootana/Makefile
+++ b/analyzer/rootana/Makefile
@@ -34,7 +34,7 @@ endif
 ROOT_LIBS = $(shell $(ROOTSYS)/bin/root-config --libs) -lThread -lGui -lMinuit
 ALL_LIBS =  $(ROOT_LIBS)
 
-OPTFLAGS = -g -O3
+OPTFLAGS = -g -O3 -Wno-write-strings
 
 CXXFLAGS = $(OPTFLAGS) \
            $(INCLUDE_CFLAGS) $(ROOT_CFLAGS) -fPIC
