JQ: Finished first draft of ODB check (#3).
Pedestal and trigger calculations seems to work.
Output to file seems to work.
Timing still has to be checked.

--- a/analyzer/odb_check/Makefile
+++ b/analyzer/odb_check/Makefile
@@ -9,7 +9,7 @@ CCFLAGS += -Iinclude
 CCFLAGS += $(shell $(ROOTSYS)/bin/root-config --cflags)
 LDLIBS += $(shell $(ROOTSYS)/bin/root-config --libs)
 
-DEP = PulseEstimate DataDir ODBCheck
+DEP = DataDir WireMap PulseEstimate ODBCheck
 SRC = $(patsubst %,%.cc,$(DEP))
 INC = $(SRC:.cc=.hh)
 OBJ = $(SRC:.cc=.o)
