--- a/analyzer/rootana/Makefile
+++ b/analyzer/rootana/Makefile
@@ -2,16 +2,27 @@ all:  init libAnalysis.so rootana libAnalysis.rootmap
 
 .PHONY: clean print all
 
+###################################################################################
 # Process the files.make file which lists the directories that contain source code
+###################################################################################
 include src/files.make
 
+# Directories that contain source code
 EMPTY:=
 SPACE:=$(EMPTY) $(EMPTY)
 SOURCES:=$(foreach Dir,$(DIRS),$(wildcard $(Dir)/*.cpp))
 SOURCE_DIRS:= $(subst $(SPACE),:,$(DIRS))
 
-#Where should we store all object and dependency files
+# Classes that need a root dictionary
+ROOT_DICT_HEADERS:=$(ROOT_DICT_CLASSES:%=%.h)
+ROOT_DICT_SOURCES:=$(ROOT_DICT_CLASSES:%=%.cpp)
+
+#### End of files.make processing #################################################
+# Where should we store all object and dependency files
 OBJ_DIR = obj
+
+# What should we call the root dictionary
+DATA_LIBRARY_NAME:=RootanaDataClasses
 
 # A list of directories with header files. Should be colon-separated. eg:
 #   inc:tree_files/inc:extra_stuff/inc
@@ -47,6 +58,12 @@ OPTFLAGS = -g -O3 -Wno-write-strings
 CXXFLAGS := $(OPTFLAGS) \
            $(INCLUDE_CFLAGS) $(ROOT_CFLAGS) -fPIC
 
+ALCAPANA_DATACLASSES := $(DAQdir)/analyzer/work/$(USER)/libDataClasses.so
+ALCAPANA_DATALINKDEF := $(DAQdir)/analyzer/src/common/DataLibraryLinkDef.h
+ROOTANA_DATALINKDEF := src/LibraryLinkDef.h
+ROOTANA_DATACLASSES :=lib$(DATA_LIBRARY_NAME).so 
+DATA_LIBRARY_SOURCE := ${OBJ_DIR}/$(DATA_LIBRARY_NAME).cpp
+DATA_LIBRARY_HEADER := ${OBJ_DIR}/$(DATA_LIBRARY_NAME).h
 
 # Determine the names of the object files by pattern substitution
 # from the source file names.
@@ -54,8 +71,6 @@ OBJECTS := $(notdir $(patsubst %.C,%.o,$(SOURCES)))
 OBJECTS := $(patsubst %.cpp,%.o, $(OBJECTS))
 OBJECTS := $(addprefix $(OBJ_DIR)/, $(OBJECTS))
 
-LIB_DATACLASS := $(DAQdir)/analyzer/work/$(USER)/libDataClasses.so
-DATALINKDEF := $(DAQdir)/analyzer/src/common/DataLibraryLinkDef.h
 
 ####################################################################
 # Define the various make targets
@@ -66,19 +81,26 @@ ${OBJECTS}: ${OBJ_DIR}/%.o: %.cpp
 	@$(CXX) -c -Wall $(CXXFLAGS) -o $@  $<
 	@$(CXX) -MM $(CXXFLAGS) $< > $(patsubst %.o,%.d,$@)
 
-rootana: $(OBJECTS)
-	@echo -e "Building Rootana" 
-	@$(CXX) $(ICCFLAGS) -Wl,--no-as-needed -o rootana $(OBJECTS) $(ROOT_LIBS) $(LIB_DATACLASS)
+$(DATA_LIBRARY_SOURCE):
+	@$(ROOTSYS)/bin/rootcint -f $@ -c $(UIUC_CFLAGS) -p $(INCLUDE_CFLAGS) ${ROOT_DICT_HEADERS} $(ROOTANA_DATALINKDEF)
 
-libAnalysis.so: $(OBJECTS)
+$(ROOTANA_DATACLASSES):  $(DATA_LIBRARY_SOURCE) $(ROOT_DICT_SOURCES) 
+	@g++ -shared -o$@ $(ROOT_LIBS) $(CXXFLAGS) -I$(ROOTSYS)/include $(INCLUDE_CFLAGS) $^
+	#@rm $(DATA_LIBRARY_SOURCE) $(DATA_LIBRARY_HEADER)
+
+rootana: $(OBJECTS) $(ROOTANA_DATACLASSES)
+	@echo -e "Building Rootana" 
+	@$(CXX) $(ICCFLAGS) -Wl,--no-as-needed -o rootana $(OBJECTS) $(ROOT_LIBS) -L$(PWD) $(ALCAPANA_DATACLASSES) $(ROOTANA_DATACLASSES)
+
+libAnalysis.so: $(OBJECTS) $(ROOTANA_DATACLASSES)
 	@echo -e "Making shared library: '"$@"' from '"$^"'"
 	@$(CXX) $(ICCLIBS) $(ROOT_LIBS) -shared -o libAnalysis.so \
 		$(shell root-config --ldflags) -I$(ROOTSYS)/include $^ -lMinuit -lPhysics \
-		$(LIB_DATACLASS)
+		$(ALCAPANA_DATACLASSES) $(PWD)/$(ROOTANA_DATACLASSES)
 
-libAnalysis.rootmap: libAnalysis.so $(DATALINKDEF)
+libAnalysis.rootmap: libAnalysis.so $(ALCAPANA_DATALINKDEF) $(ROOTANA_DATALINKDEF)
 	@rlibmap -f -o libAnalysis.rootmap -l libAnalysis.so -d libCore \
-		-c $(DATALINKDEF)
+		-c $(ALCAPANA_DATALINKDEF) $(ROOTANA_DATALINKDEF)
 
 init: | make_obj_dir
 
@@ -90,6 +112,8 @@ clean: clean_libraries clean_rootana clean_obj_dir
 clean_libraries:
 	@echo Removing libraries
 	rm -f libAnalysis.*
+	rm -f $(ROOTANA_DATACLASSES)
+	rm -f $(DATA_LIBRARY_NAME)*
 
 clean_rootana:
 	@echo Removing rootana
@@ -102,18 +126,20 @@ clean_obj_dir:
 print:
 	@echo -e "ALL_LIBS = $(ALL_LIBS)             \n" 
 	@echo -e "CXXFLAGS = $(CXXFLAGS)             \n" 
-	@echo -e "DATALINKDEF = $(DATALINKDEF)       \n" 
+	@echo -e "ROOTANA_DATALINKDEF = $(ROOTANA_DATALINKDEF)       \n" 
 	@echo -e "DIRS = $(DIRS)                     \n" 
 	@echo -e "INCLUDE_CFLAGS = $(INCLUDE_CFLAGS) \n" 
 	@echo -e "INCLUDE_DIRS = $(INCLUDE_DIRS)     \n" 
 	@echo -e "LBITS = $(LBITS)                   \n" 
-	@echo -e "LIB_DATACLASS = $(LIB_DATACLASS)   \n" 
+	@echo -e "ALCAPANA_DATACLASSES = $(ALCAPANA_DATACLASSES)   \n" 
 	@echo -e "OBJECTS = $(OBJECTS)               \n" 
 	@echo -e "OBJ_DIR = $(OBJ_DIR)               \n" 
 	@echo -e "OPTFLAGS = $(OPTFLAGS)             \n" 
 	@echo -e "ROOT_CFLAGS = $(ROOT_CFLAGS)       \n" 
 	@echo -e "ROOT_LIBS = $(ROOT_LIBS)           \n" 
+	@echo -e "ROOT_DICT_CLASSES = $(ROOT_DICT_CLASSES)           \n" 
+	@echo -e "ROOT_DICT_HEADERS = $(ROOT_DICT_HEADERS)           \n" 
 	@echo -e "SOURCES = $(SOURCES)               \n" 
 	@echo -e "SOURCE_DIRS = $(SOURCE_DIRS)       \n" 
 
-include $(wildcard $(OBJ_DIR)/*.d)
+#include $(wildcard $(OBJ_DIR)/*.d)
