--- a/analyzer/rootana/Makefile
+++ b/analyzer/rootana/Makefile
@@ -80,13 +80,14 @@ OBJECTS := $(addprefix $(OBJ_DIR)/, $(OBJECTS))
 TUT_USE_OBJECTS := $(filter-out obj/main.o, $(OBJECTS))
 TUT_OBJECTS := $(notdir $(patsubst %.cpp,%.o, $(TUT_SOURCES)))
 TUT_OBJECTS := $(addprefix $(TUT_ROOT)/, $(TUT_OBJECTS)) 
+
 ####################################################################
 # Define the various make targets
 ####################################################################
 
 ${OBJECTS}: ${OBJ_DIR}/%.o: %.cpp
 	@echo -e "Making object: '"$@"'"
-	@echo "   from '"$^"'"
+	@#echo "   from '"$^"'"
 	@$(CXX) -c -Wall $(CXXFLAGS) -o $@  $<
 	@$(CXX) -MP -MM -MT $@ $(CXXFLAGS) $< > $(patsubst %.o,%.d,$@)
 
@@ -118,18 +119,12 @@ make_obj_dir:
 tut: init libAnalysis.so libAnalysis.rootmap unit_test
 
 $(TUT_ROOT)/%.o: $(TUT_ROOT)/%.cpp
-#	echo ">> Make $@\n   from $^" 
 	@$(CXX) -c -Wall $(CXXFLAGS) -I$(TUT_INCLUDE_DIRS) -o $@ $^   
 
 unit_test: $(TUT_USE_OBJECTS) $(ROOTANA_DATACLASSES) $(TUT_SOURCES) $(TUT_OBJECTS) $(TUT_ROOT)/tut_main.o
 	@echo -e "Building unit_tests"
 	@$(CXX) -c -Wall $(CXXFLAGS) -I$(TUT_INCLUDE_DIRS) -o $(TUT_ROOT)/tut_main.o $(TUT_ROOT)/tut_main.cpp
-#	@$(CXX) $(ICCFLAGS) -Wl,--no-as-needed -o unit_test $(TUT_USE_OBJECTS) $(ROOT_LIBS) -L$(PWD) $(ALCAPANA_DATACLASSES) $(ROOTANA_DATACLASSES) -I$(TUT_INCLUDE_DIRS) $(TUT_SOURCES)
 	@$(CXX) $(ICCFLAGS) -Wl,--no-as-needed -o unit_test $(TUT_USE_OBJECTS) $(ROOT_LIBS) -L$(PWD) $(ALCAPANA_DATACLASSES) $(ROOTANA_DATACLASSES) -I$(TUT_INCLUDE_DIRS) $(TUT_OBJECTS) $(TUT_ROOT)/tut_main.o
-#	@$(CXX) $(ICCFLAGS) -Wl,--no-as-needed -o unit_test $(TUT_USE_OBJECTS) $(ROOT_LIBS) -L$(PWD) $(ALCAPANA_DATACLASSES) $(ROOTANA_DATACLASSES) -I$(TUT_INCLUDE_DIRS) $(TUT_ROOT)/tut_main.o $(TUT_ROOT)/example_test.cpp
-#	@$(CXX) -c -Wall $(CXXFLAGS) -o $(TUT_ROOT)/tut_main.cpp  
-#	@$(CXX) -MP -MM -MT obj/tut.so $(CXXFLAGS) $TUT_SOURCES > $(patsubst %.o,%.d,obj/tut.so)
-#	#@
 
 clean: clean_libraries clean_rootana clean_obj_dir clean_tut
 
