This should ensure that the root dictionaries get updated when a new class is added to the linkdef, or if an existing class has a change of schema.

--- a/analyzer/rootana/Makefile
+++ b/analyzer/rootana/Makefile
@@ -91,7 +91,7 @@ ${OBJECTS}: ${OBJ_DIR}/%.o: %.cpp
 	@$(CXX) -c -Wall $(CXXFLAGS) -o $@  $<
 	@$(CXX) -MP -MM -MT $@ $(CXXFLAGS) $< > $(patsubst %.o,%.d,$@)
 
-$(DATA_LIBRARY_SOURCE):
+$(DATA_LIBRARY_SOURCE): $(ROOTANA_DATALINKDEF) ${ROOT_DICT_HEADERS}
 	@$(ROOTSYS)/bin/rootcint -f $@ -c $(UIUC_CFLAGS) -p $(INCLUDE_CFLAGS) ${ROOT_DICT_HEADERS} $(ROOTANA_DATALINKDEF)
 
 $(ROOTANA_DATACLASSES):  $(DATA_LIBRARY_SOURCE) $(ROOT_DICT_SOURCES) 
