--- a/analyzer/rootana/production.cfg
+++ b/analyzer/rootana/production.cfg
@@ -7,26 +7,17 @@ dump_contents
 dq_amp = IslandAmplitude
 dq_len = IslandLength
 # General
-analyse_pulses_mb = MakeAnalysedPulses
-analyse_pulses_cf = MakeAnalysedPulses
-analyse_pulses_int = MakeAnalysedPulses
-detector_pulses = MakeDetectorPulses
-muon_events = MakeMuonEvents
+analyse_pulses = MakeAnalysedPulses
+#detector_pulses = MakeDetectorPulses
+#muon_events = MakeMuonEvents
+PlotTime
+PlotAmplitude
+PlotAmpVsMuScTDiff
 
-[ analyse_pulses_mb ]
+[ analyse_pulses ]
 analyse_channels=all
-default_fast_generator=MaxBin
-default_slow_generator=MaxBin
-
-[ analyse_pulses_cf ]
-analyse_channels=all
-default_fast_generator=CFTime
-default_slow_generator=CFTime
-
-[ analyse_pulses_int ]
-analyse_channels=all
-default_fast_generator=SimpInt
-default_slow_generator=SimpInt
+default_fast_generator=MaxBin : CFTime : SimpInt
+default_slow_generator=MaxBin : CFTime : SimpInt
 
 [ detector_pulses] 
 
