Update the production.cfg file

--- a/analyzer/rootana/production.cfg
+++ b/analyzer/rootana/production.cfg
@@ -3,15 +3,16 @@ list_modules
 dump_contents
 
 [ MODULES ]
-# Data Quality
-dq_amp = IslandAmplitude
-dq_len = IslandLength
 # General
 analyse_pulses = MakeAnalysedPulses
-#detector_pulses = MakeDetectorPulses
+detector_pulses = MakeDetectorPulses
 #muon_events = MakeMuonEvents
 PlotTime
 PlotAmplitude
+PlotTDPs
+# Data Quality
+dq_amp = IslandAmplitude
+dq_len = IslandLength
 
 [ analyse_pulses ]
 analyse_channels=all
@@ -19,6 +20,7 @@ default_fast_generator=MaxBin : CFTime : SimpInt
 default_slow_generator=MaxBin : CFTime : SimpInt
 
 [ detector_pulses] 
+time_difference=1
 
 [ muon_events ] 
 algorithm=MaxTimeDiff
