New configurations directory + change production.cfg

--- a/analyzer/rootana/configurations/production.cfg
+++ b/analyzer/rootana/configurations/production.cfg
@@ -1,28 +1,35 @@
-debug=all
+#debug=all
 list_modules
 dump_contents
 
 [ MODULES ]
-# General
+## Get / save pulses
+# load_pulses = LoadPulses
 analyse_pulses = MakeAnalysedPulses
 detector_pulses = MakeDetectorPulses
-#muon_events = MakeMuonEvents
+SavePulses
+
+## Plot TAPS
 PlotTime
 PlotAmplitude
+PlotIntegrals
+
+## Plot TDPs
 PlotTDPs
-# Data Quality
+
+## Data Quality
 dq_amp = IslandAmplitude
 dq_len = IslandLength
 
 [ analyse_pulses ]
 analyse_channels=all
-default_fast_generator=MaxBin : CFTime : SimpInt
-default_slow_generator=MaxBin : CFTime : SimpInt
+default_fast_generator=FirstComplete
+default_slow_generator=FirstComplete
 
 [ detector_pulses] 
 time_difference=1
 
-[ muon_events ] 
-algorithm=MaxTimeDiff
+[ load_pulses ]
+file_name=input.root
 
 # vim: set syn=cfg:
