--- a/analyzer/rootana/configurations/production.cfg
+++ b/analyzer/rootana/configurations/production.cfg
@@ -17,6 +17,57 @@ PlotIntegral
 ## Plot TDPs
 PlotTDPs
 
+## Plot TDiffs
+#Thin right, thick right
+r11_r2_f= PlotTDiff( SiR1-1-F , SiR2-F ) 
+r12_r2_f= PlotTDiff( SiR1-2-F , SiR2-F ) 
+r13_r2_f= PlotTDiff( SiR1-3-F , SiR2-F ) 
+r14_r2_f= PlotTDiff( SiR1-4-F , SiR2-F ) 
+r11_r2_s= PlotTDiff( SiR1-1-S , SiR2-S ) 
+r12_r2_s= PlotTDiff( SiR1-2-S , SiR2-S ) 
+r13_r2_s= PlotTDiff( SiR1-3-S , SiR2-S ) 
+r14_r2_s= PlotTDiff( SiR1-4-S , SiR2-S ) 
+
+#Thin left, thick left
+l11_l2_f= PlotTDiff( SiL1-1-F , SiL2-F ) 
+l12_l2_f= PlotTDiff( SiL1-2-F , SiL2-F ) 
+l13_l2_f= PlotTDiff( SiL1-3-F , SiL2-F ) 
+l14_l2_f= PlotTDiff( SiL1-4-F , SiL2-F ) 
+l11_l2_s= PlotTDiff( SiL1-1-S , SiL2-S ) 
+l12_l2_s= PlotTDiff( SiL1-2-S , SiL2-S ) 
+l13_l2_s= PlotTDiff( SiL1-3-S , SiL2-S ) 
+l14_l2_s= PlotTDiff( SiL1-4-S , SiL2-S ) 
+
+#Thin and thick left, Left veto
+l11_s_sL= PlotTDiff( SiL1-1-S , ScL    ) 
+l12_s_sL= PlotTDiff( SiL1-2-S , ScL    ) 
+l13_s_sL= PlotTDiff( SiL1-3-S , ScL    ) 
+l14_s_sL= PlotTDiff( SiL1-4-S , ScL    ) 
+l2_s_sL = PlotTDiff( SiL2-S   , ScL    ) 
+l11_f_sL= PlotTDiff( SiL1-1-F , ScL    ) 
+l12_f_sL= PlotTDiff( SiL1-2-F , ScL    ) 
+l13_f_sL= PlotTDiff( SiL1-3-F , ScL    ) 
+l14_f_sL= PlotTDiff( SiL1-4-F , ScL    ) 
+l2_f_sL = PlotTDiff( SiL2-F   , ScL    ) 
+
+#Thin and thick right, Right veto
+r11_s_sR= PlotTDiff( SiR1-1-S , ScR    ) 
+r12_s_sR= PlotTDiff( SiR1-2-S , ScR    ) 
+r13_s_sR= PlotTDiff( SiR1-3-S , ScR    ) 
+r14_s_sR= PlotTDiff( SiR1-4-S , ScR    ) 
+r2_s_sR = PlotTDiff( SiR2-S   , ScR    ) 
+r11_f_sR= PlotTDiff( SiR1-1-F , ScR    ) 
+r12_f_sR= PlotTDiff( SiR1-2-F , ScR    ) 
+r13_f_sR= PlotTDiff( SiR1-3-F , ScR    ) 
+r14_f_sR= PlotTDiff( SiR1-4-F , ScR    ) 
+r2_f_sR = PlotTDiff( SiR2-F   , ScR    ) 
+
+# Various c.f. muSc
+sV_mS   = PlotTDiff( ScVe     , muSc   ) 
+G_f_mS  = PlotTDiff( Ge-F     , muSc   ) 
+G_s_mS  = PlotTDiff( Ge-S     , muSc   ) 
+sG_mS   = PlotTDiff( ScGe     , muSc   ) 
+
 ## Data Quality
 dq_amp = IslandAmplitude
 dq_len = IslandLength
